Flesh out career section, fix jump bug

--- a/app/styles/mystyles.css
+++ b/app/styles/mystyles.css
@@ -39,9 +39,23 @@ body {
 #my-social-buttons {
     margin-top: 1.5em;
 }
-h1, h2, h3, h4, h5, h6 {
-    color: #5e5e5e;
+.job-title {
+    display: inline-block;
+    /*background-color: rgba(0, 0, 0, 0.3);*/
+    /*border-radius: 0.15em;*/
+    padding:0.15em;
+    margin-bottom:0;
+    font-size: 0.9em;
+}
+.job-descr {
+    font-size: 0.9em;
+    margin-bottom: auto;
+}
+h1, h2, h3, h4, h5, h6, h7 {
+    /*color: #5e5e5e;*/
     margin-bottom: 0.4rem;
+
+    text-rendering: optimizeLegibility;
 }
 /*
 .container-thing {
@@ -131,7 +145,7 @@ h1, h2, h3, h4, h5, h6 {
     -o-transform: translateZ(0) translateY(0);
 }
 
-.content-container:target {
+.content-container.current-content {
     display:block;
     text-align: justify;
 }
@@ -198,7 +212,7 @@ a:hover, a:focus {
 
 .row.info-listing {
     background: #444;
-    border-radius: 0.15em;
+    /*border-radius: 0.15em;*/
     margin-bottom: 1em;
     padding: 0.5em;
 }
@@ -209,6 +223,23 @@ a:hover, a:focus {
 
 .logo {
     width: 100%;
+    height: 100%;
     max-width: 12em;
     max-height: 10em;
+    margin-bottom:0.3em;
+}
+.job-descr, .techs-used {
+    display: inline-block;
+    font-size: 0.85em;
+    margin-bottom: 0;
+    margin-top: 0.3em;
+    word-spacing: 0.6em;
+}
+.techs-used {
+    margin-right: 0.5em;
+}
+.techs-list {
+    font-size: 0.85em;
+    display: inline-block;
+    margin-bottom: 0;
 }
